test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-unmanaged-from-oknil-shared.chpl
//  lhs: unmanaged?  rhs: shared?  error: mm

class MyClass {  var x: int;  }

var rhs: shared MyClass?;

record MyRecord {
  var lhs: unmanaged MyClass? = rhs;
}

var myr = new MyRecord();

compilerError("done");
