test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-unmanaged-from-oknil-shared.good
init-field-dflt-oknil-unmanaged-from-oknil-shared.chpl:8: error: cannot initialize field MyRecord.lhs of type 'unmanaged MyClass?' from a 'shared MyClass?'
